Set the summary navigation component to have a fixed size.
This ought to fix the temporary overlap with routes in IE11.

--- a/app/component/summary.scss
+++ b/app/component/summary.scss
@@ -343,3 +343,8 @@
 .mobile .street-mode-selector-panel-container {
   padding: 0 $padding-small;
 }
+
+.summary-navigation-container {
+  background-color: $background-color-lighter;
+  flex: 0 0 auto;
+}
